package hamburgueria.atendimento;

public enum TipoRequisicao {
    DUVIDA,
    RECLAMACAO,
    REEMBOLSO,
    DECISAO_ESTRATEGICA
}
