@startuml diagrama-atendimento
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
title Domínio: atendimento\n(Padrões: Chain of Responsibility · Mediator · Facade)

' ── Chain of Responsibility ────────────────────────────────────────────
abstract class Atendente <<Chain of Responsibility>> {
  # proximo : Atendente
  # nome : String
  --
  + setProximo(proximo : Atendente) : Atendente
  + {abstract} atender(req : Requisicao) : boolean
}
class AtendenteCaixa   extends Atendente
class AtendenteGerente extends Atendente
class AtendenteDono    extends Atendente

Atendente --> Atendente : proximo

enum TipoRequisicao {
  DUVIDA
  RECLAMACAO
  REEMBOLSO
  DECISAO_ESTRATEGICA
}

class Requisicao {
  - descricao : String
  - tipo : TipoRequisicao
}
Requisicao --> TipoRequisicao

' ── Mediator ───────────────────────────────────────────────────────────
class CentralAtendimento <<Mediator + Singleton>> {
  - {static} instancia : CentralAtendimento
  - cozinha : Cozinha
  --
  - CentralAtendimento()
  + {static} getInstance() : CentralAtendimento
  + registrarPedido(pedido : Pedido)
}
CentralAtendimento --> Cozinha : coordena

' ── Facade ─────────────────────────────────────────────────────────────
class PedidoFacade <<Facade>> {
  - central : CentralAtendimento
  --
  + fazerPedidoDelivery(cliente, itens, taxaEntrega) : Pedido
}
PedidoFacade --> CentralAtendimento

note right of PedidoFacade
  <b>Facade</b>: simplifica o fluxo completo
  cliente → itens → preço → central → cozinha
end note
@enduml
